# mb2-embassy-rgb

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
